--- a/EN/donate.html
+++ b/EN/donate.html
@@ -40,10 +40,10 @@
           <h3 class="doartt1">PIX</h3>
           <div class="doardv0">
             <div class="doardv01">
-              <img class="doarim0" src="../images/doar1.jpg">
-              <img class="doarim0" src="../images/doar10.JPG">
-              <img class="doarim0" src="../images/doar13.JPG">
-              <img class="doarim0" src="../images/doar25.JPG">
+              <img class="doarim0" src="../images/doar1.webp">
+              <img class="doarim0" src="../images/doar10.webp">
+              <img class="doarim0" src="../images/doar13.webp">
+              <img class="doarim0" src="../images/doar25.webp">
             </div>
             <div class="doardv1">
               <div class="doardv2">
@@ -57,10 +57,10 @@
               -->
             </div>
             <div class="doardv01">
-              <img class="doarim0" src="../images/doar9.JPG">
-              <img class="doarim0" src="../images/doar5.JPG">
-              <img class="doarim0" src="../images/doar20.JPG">
-              <img class="doarim0" src="../images/doar7.JPG">
+              <img class="doarim0" src="../images/doar9.webp">
+              <img class="doarim0" src="../images/doar5.webp">
+              <img class="doarim0" src="../images/doar20.webp">
+              <img class="doarim0" src="../images/doar7.webp">
             </div>
           </div>
         </section>
