--- a/doar.html
+++ b/doar.html
@@ -40,10 +40,10 @@
           <h3 class="doartt1">PIX</h3>
           <div class="doardv0">
             <div class="doardv01">
-              <img class="doarim0" src="images/doar1.jpg">
-              <img class="doarim0" src="images/doar2.JPG">
-              <img class="doarim0" src="images/doar3.JPG">
-              <img class="doarim0" src="images/doar4.JPG">
+              <img class="doarim0" src="images/doar1.webp">
+              <img class="doarim0" src="images/doar2.webp">
+              <img class="doarim0" src="images/doar3.webp">
+              <img class="doarim0" src="images/doar4.webp">
             </div>
             <div class="doardv1">
               <div class="doardv2">
@@ -57,10 +57,10 @@
               -->
             </div>
             <div class="doardv02">
-              <img class="doarim0" src="images/doar5.JPG">
-              <img class="doarim0" src="images/doar6.JPG">
-              <img class="doarim0" src="images/doar7.JPG">
-              <img class="doarim0" src="images/doar8.JPG">
+              <img class="doarim0" src="images/doar5.webp">
+              <img class="doarim0" src="images/doar6.webp">
+              <img class="doarim0" src="images/doar7.webp">
+              <img class="doarim0" src="images/doar8.webp">
             </div>
           </div>
         </section>
