--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <link href="style.css" rel="stylesheet">
 <header id="hd">
-    <div id="lg"><a href="/"><img src="images/logo.jpg" class="lg"></a></div>
+    <div id="lg"><a href="/"><img src="images/logo.webp" class="lg"></a></div>
     <ul id="ls">
         <li><a href="/" class="nv"><img src="images/home.svg" class="im">HOME</a></li>
         <li><a href="/sobre.html" class="nv"><img src="images/sobre.svg" class="im">SOBRE NÓS</a></li>
