--- a/sobre.html
+++ b/sobre.html
@@ -38,7 +38,7 @@
       <section>
         <div class="sobredv">
           <div data-aos="zoom-out" data-aos-easing="ease-in-out" data-aos-duration="5000" class="sobredv0">
-            <img class="sobrehero" src="images/bg3.jpg">
+            <img class="sobrehero" src="images/bg3.webp">
           </div>
           <h2 data-aos="flip-left" data-aos-delay="700" data-aos-easing="ease-in-out" data-aos-duration="5000" class="sobrett1">Sobre Nós</h2>
         </div>
@@ -50,38 +50,38 @@
             <h2 class="subtitulo" style="margin:5vw 0 0 0;color:#FFFFFF">NOSSO DIA A DIA</h2>
             <div class="slideres">
                 <div class="slide-track">
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/1.JPG" alt="IMAGEM 1"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/2.JPG" alt="IMAGEM 2"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/3.JPG" alt="IMAGEM 3"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/4.JPG" alt="IMAGEM 4"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/5.JPG" alt="IMAGEM 5"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/6.JPG" alt="IMAGEM 6"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/7.JPG" alt="IMAGEM 7"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/8.JPG" alt="IMAGEM 8"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/9.JPG" alt="IMAGEM 9"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/10.JPG" alt="IMAGEM 10"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/11.JPG" alt="IMAGEM 11"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/12.JPG" alt="IMAGEM 12"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/13.JPG" alt="IMAGEM 13"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/14.JPG" alt="IMAGEM 14"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/15.JPG" alt="IMAGEM 15"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/16.JPG" alt="IMAGEM 16"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/17.JPG" alt="IMAGEM 17"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/18.JPG" alt="IMAGEM 18"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/19.JPG" alt="IMAGEM 19"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/20.JPG" alt="IMAGEM 20"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/21.JPG" alt="IMAGEM 21"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/22.JPG" alt="IMAGEM 22"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/23.JPG" alt="IMAGEM 23"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/24.JPG" alt="IMAGEM 24"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/25.JPG" alt="IMAGEM 25"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/26.JPG" alt="IMAGEM 26"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/27.JPG" alt="IMAGEM 27"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/28.JPG" alt="IMAGEM 28"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/29.JPG" alt="IMAGEM 29"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/1.JPG" alt="IMAGEM 1"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/2.JPG" alt="IMAGEM 2"></div>
-                    <div class="slides"><img class="slidesimages" src="images/carrousel/3.JPG" alt="IMAGEM 3"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/1.webp" alt="IMAGEM 1"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/2.webp" alt="IMAGEM 2"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/3.webp" alt="IMAGEM 3"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/4.webp" alt="IMAGEM 4"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/5.webp" alt="IMAGEM 5"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/6.webp" alt="IMAGEM 6"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/7.webp" alt="IMAGEM 7"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/8.webp" alt="IMAGEM 8"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/9.webp" alt="IMAGEM 9"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/10.webp" alt="IMAGEM 10"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/11.webp" alt="IMAGEM 11"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/12.webp" alt="IMAGEM 12"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/13.webp" alt="IMAGEM 13"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/14.webp" alt="IMAGEM 14"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/15.webp" alt="IMAGEM 15"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/16.webp" alt="IMAGEM 16"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/17.webp" alt="IMAGEM 17"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/18.webp" alt="IMAGEM 18"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/19.webp" alt="IMAGEM 19"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/20.webp" alt="IMAGEM 20"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/21.webp" alt="IMAGEM 21"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/22.webp" alt="IMAGEM 22"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/23.webp" alt="IMAGEM 23"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/24.webp" alt="IMAGEM 24"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/25.webp" alt="IMAGEM 25"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/26.webp" alt="IMAGEM 26"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/27.webp" alt="IMAGEM 27"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/28.webp" alt="IMAGEM 28"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/29.webp" alt="IMAGEM 29"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/1.webp" alt="IMAGEM 1"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/2.webp" alt="IMAGEM 2"></div>
+                    <div class="slides"><img class="slidesimages" src="images/carrousel/3.webp" alt="IMAGEM 3"></div>
                 </div>
             </div>
           </div>
