--- a/ES/header.html
+++ b/ES/header.html
@@ -1,6 +1,6 @@
 <link href="../style.css" rel="stylesheet">
 <header id="hd">
-    <div id="lg"><a href="es.html"><img src="../images/logo.jpg" class="lg"></a></div>
+    <div id="lg"><a href="es.html"><img src="../images/logo.webp" class="lg"></a></div>
     <ul id="ls">
         <li><a href="es.html" class="nv"><img src="../images/home.svg" class="im">HOME</a></li>
         <li><a href="sobre.html" class="nv"><img src="../images/sobre.svg" class="im">NOSOTROS</a></li>
