--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </p>
           </div>
           <div class="dv3">
-            <img class="im1" src="images/1.JPG">
+            <img class="im1" src="images/1.webp">
           </div>
         </div>
         <div class="dv2">
@@ -85,7 +85,7 @@
             </p>
           </div>
           <div class="dv3">
-            <img class="im1" src="images/2.JPG">
+            <img class="im1" src="images/2.webp">
           </div>
         </div>
         <div class="dv2">
@@ -103,7 +103,7 @@
             </p>
           </div>
           <div class="dv3">
-            <img class="im1" src="images/3.JPG">
+            <img class="im1" src="images/3.webp">
           </div>
         </div>
       </section>
