--- a/EN/about.html
+++ b/EN/about.html
@@ -134,6 +134,50 @@
       <a href="https://api.whatsapp.com/send?phone=5511914874136&text=%20site?" target="_blank">
         <img class="whats" src="../images/whats.svg">
       </a>
+      <div class="loading">
+        <div class="word">
+          <div class="letter">J</div>
+          <div class="letter">e</div>
+          <div class="letter">s</div>
+          <div class="letter">u</div>
+          <div class="letter">s</div>
+        </div>
+        <div class="word">
+          <div class="letter">O </div>
+          <div class="letter"> C</div>
+          <div class="letter">a</div>
+          <div class="letter">m</div>
+          <div class="letter">i</div>
+          <div class="letter">n</div>
+          <div class="letter">h</div>
+          <div class="letter">o</div>
+        </div>
+        <div class="word">
+          <div class="letter">A </div>
+          <div class="letter"> V</div>
+          <div class="letter">e</div>
+          <div class="letter">r</div>
+          <div class="letter">d</div>
+          <div class="letter">a</div>
+          <div class="letter">d</div>
+          <div class="letter">e</div>
+        </div>
+        <div class="word">
+          <div class="letter">A </div>
+          <div class="letter"> V</div>
+          <div class="letter">i</div>
+          <div class="letter">d</div>
+          <div class="letter">a</div>
+        </div>
+        <div class="word"></div>
+        <div class="word"></div>
+        <!-- Bolinhas girando embaixo -->
+        <div class="dots">
+          <div class="dot">.</div>
+          <div class="dot">.</div>
+          <div class="dot">.</div>
+        </div>
+      </div>
     </main>
     <footer></footer>
   </body>
