--- a/EN/contact.html
+++ b/EN/contact.html
@@ -51,6 +51,50 @@
         </div>
         <iframe class="im41" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3655.684268497629!2d-46.5916984!3d-23.6156537!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5d6962fc2625%3A0x5fa2889d038577a8!2sAssocia%C3%A7%C3%A3o%20Alcan%C3%A7ando%20Vidas%20-%20APAV!5e0!3m2!1spt-BR!2sbr!4v1738076114171!5m2!1spt-BR!2sbr" width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </section>
+      <div class="loading">
+        <div class="word">
+          <div class="letter">J</div>
+          <div class="letter">e</div>
+          <div class="letter">s</div>
+          <div class="letter">u</div>
+          <div class="letter">s</div>
+        </div>
+        <div class="word">
+          <div class="letter">O </div>
+          <div class="letter"> C</div>
+          <div class="letter">a</div>
+          <div class="letter">m</div>
+          <div class="letter">i</div>
+          <div class="letter">n</div>
+          <div class="letter">h</div>
+          <div class="letter">o</div>
+        </div>
+        <div class="word">
+          <div class="letter">A </div>
+          <div class="letter"> V</div>
+          <div class="letter">e</div>
+          <div class="letter">r</div>
+          <div class="letter">d</div>
+          <div class="letter">a</div>
+          <div class="letter">d</div>
+          <div class="letter">e</div>
+        </div>
+        <div class="word">
+          <div class="letter">A </div>
+          <div class="letter"> V</div>
+          <div class="letter">i</div>
+          <div class="letter">d</div>
+          <div class="letter">a</div>
+        </div>
+        <div class="word"></div>
+        <div class="word"></div>
+        <!-- Bolinhas girando embaixo -->
+        <div class="dots">
+          <div class="dot">.</div>
+          <div class="dot">.</div>
+          <div class="dot">.</div>
+        </div>
+      </div>
     </main>
 
     <footer></footer>
